--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "todolist",
   "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "https://ionicframework.com/",
+  "author": "Mitton Benjamin",
+  "homepage": ".",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
     "@capacitor/app": "1.0.7",
+    "@capacitor/browser": "1.0.6",
     "@capacitor/core": "3.3.3",
     "@capacitor/haptics": "1.1.3",
     "@capacitor/keyboard": "1.2.0",
